--- a/views/index.html
+++ b/views/index.html
@@ -8,20 +8,26 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,900" rel="stylesheet">
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/style/style.css" />
+	<link rel="stylesheet" href="/css/jquery.mmenu.all.css"/>
 	<script src="/js/jquery.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/jquery.mmenu.all.js"></script>
 </head>
+
 <body>
+	<div id="wrap">
+
 	<header class = "fluid-container">
 		<div class="container">
 			<div class="row">
-				<div class="col-2">
+				<div class="col-1 mr-auto">
 					<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
 					<img class="newappIcon" src="images/talkteam_logo.png">
 					<!-- <p class = "appTitle">
 					</p> -->
 				</div>
-				<div class="col-10">
+				<div class="col-2 col-sm-10 col-xs-10 col-auto">
+					<a id="hamburger" href="#mainmenu"></a>
 					<nav id="mainmenu">
 						<ul>
 							<li><a href="/">Home</a></li>
@@ -149,8 +155,11 @@
 	<!-- <section>
 		<table id='notes' class='records' border='0' cellspacing='0' cellpadding='0'><tbody></tbody></table>
 	</section> -->
-	<footer>
-		 <div>
+	<footer class="fluid-container">
+		<div class="row-12">
+			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
+		</div>
+		 <!-- <div>
 			<button class='detailBtn' onclick="toggleServiceInfo()" title='Service information'>
 				<img src='images/detail.png' alt='detail'/>
 
@@ -177,6 +186,17 @@
 	<script type="text/javascript" src="/scripts/index.js"></script>
 	<div id="myImage"><div id="innerImg"></div></div>
 	<br><br><br>
-	</div>
+	</div> -->
+</div>
+	<script type="text/javascript">
+	$(document).ready(function() {
+		 $("#mainmenu").mmenu({
+				// options
+		 }, {
+				 // configuration
+				 clone:	'true',
+			});
+	});
+	</script>
 </body>
 </html>
