--- a/views/register.html
+++ b/views/register.html
@@ -5,40 +5,75 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"/>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,900" rel="stylesheet">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/style/style.css" />
+	<link rel="stylesheet" href="/css/jquery.mmenu.all.css"/>
+	<script src="/js/jquery.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/jquery.mmenu.all.js"></script>
 </head>
+
 <body>
-	<div class = "container">
-	<div class = "banner">
-		<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
-		<img class="newappIcon" src="images/talkteam_logo.png">
-		<p class = "appTitle">
-			Register
-		</p>
-		<nav id="mainmenu">
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/register">Register</a></li>
-				<li><a href="/downloads">Downloads</a></li>
-				<li><a href="/news">News</a></li>
-			</ul>
-		</nav>
+	<div id="wrap">
+
+	<header class = "fluid-container">
+		<div class="container">
+			<div class="row">
+				<div class="col-1 mr-auto">
+					<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
+					<img class="newappIcon" src="images/talkteam_logo.png">
+					<!-- <p class = "appTitle">
+					</p> -->
+				</div>
+				<div class="col-2 col-sm-10 col-xs-10 col-auto">
+					<a id="hamburger" href="#mainmenu"></a>
+					<nav id="mainmenu">
+						<ul>
+							<li><a href="/">Home</a></li>
+							<li><a href="/register">Register</a></li>
+							<li><a href="/downloads">Downloads</a></li>
+							<li><a href="/news">News</a></li>
+							<li class="english"><a href="/translate">EN</a></li>
+						</ul>
+					</nav>
+				</div>
+				<!-- <div class = "banner">
+				</div> -->
+			</div>
+		</div>
+
+</header>
+<div class="fluid-container">
+	<div class="row">
+		<div class="col">
+			<img class="bannerimg" src="images/bannerblurred.png">
+		</div>
+	</div>
+</div>
+
+<section class="container main">
+	<div class="row intro">
+		Register
 	</div>
 
+</section>
 
-	<section>
+	<!-- <section>
 		<table id='notes' class='records' border='0' cellspacing='0' cellpadding='0'><tbody></tbody></table>
-	</section>
-	<footer>
-		<div>
-			<!-- <button class='detailBtn' onclick="toggleServiceInfo()" title='Service information'>
+	</section> -->
+	<footer class="fluid-container">
+		<div class="row-12">
+			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
+		</div>
+		 <!-- <div>
+			<button class='detailBtn' onclick="toggleServiceInfo()" title='Service information'>
 				<img src='images/detail.png' alt='detail'/>
-			-->
+
 			<button class="addBtn" onclick="addItem()" title="add record">
 				<img src="images/add.png" alt="add">
 			</button>
 			<br>
-			<a href="template.html"></a>
 			<a class = "infoImg" onclick="toggleAppInfo()">Help</a>
 		</div>
 		<div id='appinfo' class = 'appinfo' style='display: none;'>
@@ -58,6 +93,17 @@
 	<script type="text/javascript" src="/scripts/index.js"></script>
 	<div id="myImage"><div id="innerImg"></div></div>
 	<br><br><br>
-	</div>
+	</div> -->
+</div>
+	<script type="text/javascript">
+	$(document).ready(function() {
+		 $("#mainmenu").mmenu({
+				// options
+		 }, {
+				 // configuration
+				 clone:	'true',
+			});
+	});
+	</script>
 </body>
 </html>
