Routed some pages , WIP - auth login with superlogin

--- a/views/index.html
+++ b/views/index.html
@@ -56,7 +56,8 @@
 	<div class="row intro">
 		<div class="col-12">
 			<h2>
-				TalkTeam – meeting app for IBM Connections
+				TalkTeam	<br>
+				meeting app for IBM Connections
 			</h2>
 			<p>
 				Meetings are a waste of time? Losing overview of all submitted documents? Not clear which agreements have been made after the meeting? Meetings will be better, smarter and easier using TalkTeam. An app which uses the power of IBM Connections.
@@ -113,42 +114,7 @@
 			</ul>
 		</div>
 
-
-		<!-- <div class="col-12 col-md-5 col-xs-6">
-			<h2>
-				TalkTeam – meeting app for IBM Connections
-			</h2>
-			<p>
-				Meetings are a waste of time? Losing overview of all submitted documents? Not clear which agreements have been made after the meeting? Meetings will be better, smarter and easier using TalkTeam. An app which uses the power of IBM Connections.
-			</p>
-			<h3>
-				meetings will be nice and smart
-			</h3>
-			<p>
-				Talk Team supports meeting preparations, the meetings themselves and the follow-up of action points. With TalkTeam, participants are directly involved in the agenda and meeting documents. By preparing your meetings online, there is much more time for content during the actual meeting! Meetings will no longer be endless, but concrete and to the point instead.
-			</p>
-			<p>
-					TalkTeam offers a meeting solution for all kinds of teams. A team can consist of people from the internal organization, but it is also possible to add external participants. By capturing information centrally, it is clear to everyone what they are expected to do.
-			</p>
-		</div>
-		<div class="col-12 col-md-5 offset-md-2">
-
-			<h3>
-				paperless and transparent
-			</h3>
-			<p>
-				TalkTeam is a smart addition to IBM Connections. It integrates into the company-wide social platform and enriches IBM Connections with a number of useful tools. TalkTeam offers a clear meeting structure with information from a community and presents it in a simple way. You have a clear perception of each meeting.
-			</p>
-			<p>
-				A meeting consists of a number of participants. TalkTeam offers the possibility to organize a single meeting or a recurring meeting with a team. TalkTeam also shows your meeting directly on your calendar.
-			</p>
-			<p>
-				Participants can add agenda items and documents, and have the opportunity to take notes. During the meeting the agenda items are being discussed and action points and decisions can be specified.
-			</p>
-			<p>
-				All information is part of the collaboration platform IBM Connections, which makes it easy for those concerned to find the information.
-			</p>
-		</div> -->
+		<table id='notes' class='records' border='0' cellspacing='0' cellpadding='0'><tbody></tbody></table>
 
 </section>
 
@@ -196,6 +162,8 @@
 				 // configuration
 				 clone:	'true',
 			});
+
+
 	});
 	</script>
 </body>
