--- a/views/admin.html
+++ b/views/admin.html
@@ -56,10 +56,19 @@
 	<div class="row intro">
 		<div class="col-12">
 			<h2>
-				News & Updates
+				ADMINPAGE - TESTSUITE
 			</h2>
 			<p>
 				Meetings are a waste of time? Losing overview of all submitted documents? Not clear which agreements have been made after the meeting? Meetings will be better, smarter and easier using TalkTeam. An app which uses the power of IBM Connections.
+			</p>
+			<h3>
+				meetings will be nice and smart
+			</h3>
+			<p>
+				Talk Team supports meeting preparations, the meetings themselves and the follow-up of action points. With TalkTeam, participants are directly involved in the agenda and meeting documents. By preparing your meetings online, there is much more time for content during the actual meeting! Meetings will no longer be endless, but concrete and to the point instead.
+			</p>
+			<p>
+					TalkTeam offers a meeting solution for all kinds of teams. A team can consist of people from the internal organization, but it is also possible to add external participants. By capturing information centrally, it is clear to everyone what they are expected to do.
 			</p>
 		</div>
 		<div class="col-12 purplebox">
@@ -79,19 +88,39 @@
 				All information is part of the collaboration platform IBM Connections, which makes it easy for those concerned to find the information.
 			</p>
 		</div>
-
-
+		<div class="col-12">
+			<h3>
+				why do you need TalkTeam?
+			</h3>
+			<ul>
+				<li>It supports processes within a single environment</li>
+				<li>Integration with internal directory of employees</li>
+				<li>
+					Integration with calendars
+				</li>
+				<li>
+					Agreements can be directly assigned
+				</li>
+				<li>
+					It enriches your collaboration platform
+				</li>
+				<li>
+					Ability to have online and paperless meetings, including people from outside your company
+				</li>
+				<li>
+					Available on multiple devices, also as a mobile app
+				</li>
+			</ul>
+		</div>
+		<table id='notes' class='records' border='0' cellspacing='0' cellpadding='0'><tbody></tbody></table>
 
 </section>
 
-	<!-- <section>
-		<table id='notes' class='records' border='0' cellspacing='0' cellpadding='0'><tbody></tbody></table>
-	</section> -->
 	<footer class="fluid-container">
 		<div class="row-12">
 			Copyright 2018 <a href="http://www.e-office.com">E-Office</a>
 		</div>
-		 <!-- <div>
+		<div>
 			<button class='detailBtn' onclick="toggleServiceInfo()" title='Service information'>
 				<img src='images/detail.png' alt='detail'/>
 
@@ -118,7 +147,7 @@
 	<script type="text/javascript" src="/scripts/index.js"></script>
 	<div id="myImage"><div id="innerImg"></div></div>
 	<br><br><br>
-	</div> -->
+	</div>
 </div>
 	<script type="text/javascript">
 	$(document).ready(function() {
