Updated Login script - with Authorization for 1 hardcoded user

--- a/views/content.html
+++ b/views/content.html
@@ -58,8 +58,8 @@
 	<div class="row intro">
 		<div class="col-12">
 			<h2>
-				TalkTeam	<br>
-				meeting app for IBM Connections
+				CONTENT	<br>
+				AUTHORIZED LOGIN
 			</h2>
 			<p>
 				Meetings are a waste of time? Losing overview of all submitted documents? Not clear which agreements have been made after the meeting? Meetings will be better, smarter and easier using TalkTeam. An app which uses the power of IBM Connections.
