--- a/views/login.html
+++ b/views/login.html
@@ -34,7 +34,6 @@
 							<li><a href="/register">Register</a></li>
 							<li><a href="/downloads">Downloads</a></li>
 							<li><a href="/news">News</a></li>
-							<li><a href="/login">Login</a></li>
 							<li class="english"><a href="/translate">EN</a></li>
 						</ul>
 					</nav>
@@ -49,74 +48,23 @@
 	<div class="row">
 		<div class="col">
 			<img class="bannerimg" src="images/bannerblurred.png">
-			<!-- <img class="bannerimg" src="images/banner_talkteam1.png"> -->
 		</div>
 	</div>
 </div>
 
 <section class="container main">
 	<div class="row intro">
+		<h2>Login</h2>
+		<br><br>
 		<div class="col-12">
-			<h2>
-				TalkTeam	<br>
-				meeting app for IBM Connections
-			</h2>
-			<p>
-				Meetings are a waste of time? Losing overview of all submitted documents? Not clear which agreements have been made after the meeting? Meetings will be better, smarter and easier using TalkTeam. An app which uses the power of IBM Connections.
-			</p>
-			<h3>
-				meetings will be nice and smart
-			</h3>
-			<p>
-				Talk Team supports meeting preparations, the meetings themselves and the follow-up of action points. With TalkTeam, participants are directly involved in the agenda and meeting documents. By preparing your meetings online, there is much more time for content during the actual meeting! Meetings will no longer be endless, but concrete and to the point instead.
-			</p>
-			<p>
-					TalkTeam offers a meeting solution for all kinds of teams. A team can consist of people from the internal organization, but it is also possible to add external participants. By capturing information centrally, it is clear to everyone what they are expected to do.
-			</p>
+			<form class="" method="post">
+				<h3>Login here</h3>
+				<input type="text" name="username" value="amy">
+				<input type="text" name="password" value="amyspassword">
+				<button type="submit" name="button"></button>
+			</form>
 		</div>
-		<div class="col-12 purplebox">
-			<h3>
-				paperless and transparent
-			</h3>
-			<p>
-				TalkTeam is a smart addition to IBM Connections. It integrates into the company-wide social platform and enriches IBM Connections with a number of useful tools. TalkTeam offers a clear meeting structure with information from a community and presents it in a simple way. You have a clear perception of each meeting.
-			</p>
-			<p>
-				A meeting consists of a number of participants. TalkTeam offers the possibility to organize a single meeting or a recurring meeting with a team. TalkTeam also shows your meeting directly on your calendar.
-			</p>
-			<p>
-				Participants can add agenda items and documents, and have the opportunity to take notes. During the meeting the agenda items are being discussed and action points and decisions can be specified.
-			</p>
-			<p>
-				All information is part of the collaboration platform IBM Connections, which makes it easy for those concerned to find the information.
-			</p>
-		</div>
-		<div class="col-12">
-			<h3>
-				why do you need TalkTeam?
-			</h3>
-			<ul>
-				<li>It supports processes within a single environment</li>
-				<li>Integration with internal directory of employees</li>
-				<li>
-					Integration with calendars
-				</li>
-				<li>
-					Agreements can be directly assigned
-				</li>
-				<li>
-					It enriches your collaboration platform
-				</li>
-				<li>
-					Ability to have online and paperless meetings, including people from outside your company
-				</li>
-				<li>
-					Available on multiple devices, also as a mobile app
-				</li>
-			</ul>
-		</div>
-
-		<table id='notes' class='records' border='0' cellspacing='0' cellpadding='0'><tbody></tbody></table>
+	</div>
 
 </section>
 
@@ -155,6 +103,9 @@
 	<div id="myImage"><div id="innerImg"></div></div>
 	<br><br><br>
 	</div> -->
+	<script type="text/javascript" src="/scripts/util.js"></script>
+	<script type="text/javascript" src="/scripts/indexcustom.js"></script>
+
 </div>
 	<script type="text/javascript">
 	$(document).ready(function() {
@@ -164,8 +115,6 @@
 				 // configuration
 				 clone:	'true',
 			});
-
-
 	});
 	</script>
 </body>
