Display newspage only when logged in

--- a/views/content.html
+++ b/views/content.html
@@ -17,34 +17,34 @@
 <body>
 	<div id="wrap">
 
-	<header class = "fluid-container">
-		<div class="container">
-			<div class="row">
-				<div class="col-1 mr-auto">
-					<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
-					<img class="newappIcon" src="images/talkteam_logo.png">
-					<!-- <p class = "appTitle">
-					</p> -->
-				</div>
-				<div class="col-2 col-sm-10 col-xs-10 col-auto">
-					<a id="hamburger" href="#mainmenu"></a>
-					<nav id="mainmenu">
+		<header class = "fluid-container">
+			<div class="container">
+				<div class="row">
+					<div class="col-1 mr-auto">
+						<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
+						<img class="newappIcon" src="images/talkteam_logo.png">
 						<ul>
-							<li><a href="/">Home</a></li>
-							<li><a href="/register">Register</a></li>
-							<li><a href="/downloads">Downloads</a></li>
-							<li><a href="/news">News</a></li>
 							<li><a href="/login">Login</a></li>
-							<li class="english"><a href="/translate">EN</a></li>
+							<li><a href="/logout">Logout</a></li>
 						</ul>
-					</nav>
-				</div>
-				<!-- <div class = "banner">
-				</div> -->
+						<!-- <p class = "appTitle">
+						</p> -->
+					</div>
+					<div class="col-2 col-sm-10 col-xs-10 col-auto">
+						<a id="hamburger" href="#mainmenu"></a>
+						<nav id="mainmenu">
+							<ul>
+								<li><a href="/">Home</a></li>
+								<li><a href="/register">Register</a></li>
+								<li><a href="/downloads">Downloads</a></li>
+								<li><a href="/news">News</a></li>
+								<li class="english"><a href="/translate">EN</a></li>
+							</ul>
+						</nav>
+					</div>
 			</div>
-		</div>
-
-</header>
+		</header>
+		
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
@@ -156,6 +156,7 @@
 	<br><br><br>
 	</div> -->
 </div>
+	<script type="text/javascript" src="/scripts/loginbutton.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function() {
 		 $("#mainmenu").mmenu({
