--- a/views/register.html
+++ b/views/register.html
@@ -23,6 +23,10 @@
 				<div class="col-1 mr-auto">
 					<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
 					<img class="newappIcon" src="images/talkteam_logo.png">
+					<ul>
+						<li><a href="/login">Login</a></li>
+						<li><a href="/logout">Logout</a></li>
+					</ul>
 					<!-- <p class = "appTitle">
 					</p> -->
 				</div>
@@ -38,9 +42,6 @@
 						</ul>
 					</nav>
 				</div>
-				<!-- <div class = "banner">
-				</div> -->
-			</div>
 		</div>
 
 </header>
