--- a/views/index.html
+++ b/views/index.html
@@ -23,6 +23,10 @@
 				<div class="col-1 mr-auto">
 					<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
 					<img class="newappIcon" src="images/talkteam_logo.png">
+					<ul>
+						<li><a href="/login">Login</a></li>
+						<li><a href="/logout">Logout</a></li>
+					</ul>
 					<!-- <p class = "appTitle">
 					</p> -->
 				</div>
@@ -34,7 +38,6 @@
 							<li><a href="/register">Register</a></li>
 							<li><a href="/downloads">Downloads</a></li>
 							<li><a href="/news">News</a></li>
-							<li><a href="/login">Login</a></li>
 							<li class="english"><a href="/translate">EN</a></li>
 						</ul>
 					</nav>
