--- a/views/logout.html
+++ b/views/logout.html
@@ -17,33 +17,34 @@
 <body>
 	<div id="wrap">
 
-	<header class = "fluid-container">
-		<div class="container">
-			<div class="row">
-				<div class="col-1 mr-auto">
-					<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
-					<img class="newappIcon" src="images/talkteam_logo.png">
-					<!-- <p class = "appTitle">
-					</p> -->
-				</div>
-				<div class="col-2 col-sm-10 col-xs-10 col-auto">
-					<a id="hamburger" href="#mainmenu"></a>
-					<nav id="mainmenu">
+		<header class = "fluid-container">
+			<div class="container">
+				<div class="row">
+					<div class="col-1 mr-auto">
+						<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
+						<img class="newappIcon" src="images/talkteam_logo.png">
 						<ul>
-							<li><a href="/">Home</a></li>
-							<li><a href="/register">Register</a></li>
-							<li><a href="/downloads">Downloads</a></li>
-							<li><a href="/news">News</a></li>
-							<li class="english"><a href="/translate">EN</a></li>
+							<li><a href="/login">Login</a></li>
+							<li><a href="/logout">Logout</a></li>
 						</ul>
-					</nav>
-				</div>
-				<!-- <div class = "banner">
-				</div> -->
+						<!-- <p class = "appTitle">
+						</p> -->
+					</div>
+					<div class="col-2 col-sm-10 col-xs-10 col-auto">
+						<a id="hamburger" href="#mainmenu"></a>
+						<nav id="mainmenu">
+							<ul>
+								<li><a href="/">Home</a></li>
+								<li><a href="/register">Register</a></li>
+								<li><a href="/downloads">Downloads</a></li>
+								<li><a href="/news">News</a></li>
+								<li class="english"><a href="/translate">EN</a></li>
+							</ul>
+						</nav>
+					</div>
 			</div>
-		</div>
+		</header>
 
-</header>
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
@@ -54,7 +55,7 @@
 
 <section class="container main">
 	<div class="row intro">
-		<h2>Login</h2>
+		<h2>Logout Succesful</h2>
 	</div>
 
 </section>
@@ -95,7 +96,6 @@
 	<br><br><br>
 	</div> -->
 	<script type="text/javascript" src="/scripts/util.js"></script>
-	<script type="text/javascript" src="/scripts/indexcustom.js"></script>
 
 </div>
 	<script type="text/javascript">
