--- a/views/login.html
+++ b/views/login.html
@@ -23,10 +23,6 @@
 			<div class="col-1 mr-auto">
 				<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
 				<img class="newappIcon" src="images/talkteam_logo.png">
-				<ul>
-					<li><a href="/login">Login</a></li>
-					<li><a href="/logout">Logout</a></li>
-				</ul>
 				<!-- <p class = "appTitle">
 				</p> -->
 			</div>
@@ -60,8 +56,8 @@
 		<div class="col-12">
 			<form class="" method="post">
 				<h3>Login here</h3>
-				<input type="text" name="username" value="amy">
-				<input type="text" name="password" value="amyspassword">
+				<input type="text" name="username" value="Pa">
+				<input type="text" name="password" value="Pa">
 				<button type="submit" name="button"></button>
 			</form>
 		</div>
