--- a/views/index.html
+++ b/views/index.html
@@ -20,15 +20,18 @@
 	<header class = "fluid-container">
 		<div class="container">
 			<div class="row">
-				<div class="col-1 mr-auto">
+				<div class="col-2 mr-auto">
 					<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
 					<img class="newappIcon" src="images/talkteam_logo.png">
-					<ul>
-						<li><a href="/login">Login</a></li>
-						<li><a href="/logout">Logout</a></li>
-					</ul>
-					<!-- <p class = "appTitle">
-					</p> -->
+					<div class="login">
+						<% if (username) { %>
+							<span>Hello <%= username %></span>
+							<a id="logoutButton" href="/logout">Logout</a>
+						<% } %>
+						<% if (!username) { %>
+							<a id="loginButton" href="/login">Login</a>
+						<% } %>
+					</div>
 				</div>
 				<div class="col-2 col-sm-10 col-xs-10 col-auto">
 					<a id="hamburger" href="#mainmenu"></a>
@@ -60,6 +63,9 @@
 <section class="container main">
 	<div class="row intro">
 		<div class="col-12">
+			<% if (username) { %>
+			  <h2><%= username %></h2>
+			<% } %>
 			<h2>
 				TalkTeam	<br>
 				meeting app for IBM Connections
@@ -159,6 +165,8 @@
 	<br><br><br>
 	</div> -->
 </div>
+<script type="text/javascript" src="/scripts/loginbutton.js"></script>
+
 	<script type="text/javascript">
 	$(document).ready(function() {
 		 $("#mainmenu").mmenu({
@@ -167,8 +175,6 @@
 				 // configuration
 				 clone:	'true',
 			});
-
-
 	});
 	</script>
 </body>
