--- a/views/register.html
+++ b/views/register.html
@@ -20,15 +20,18 @@
 	<header class = "fluid-container">
 		<div class="container">
 			<div class="row">
-				<div class="col-1 mr-auto">
+				<div class="col-2 mr-auto">
 					<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
 					<img class="newappIcon" src="images/talkteam_logo.png">
-					<ul>
-						<li><a href="/login">Login</a></li>
-						<li><a href="/logout">Logout</a></li>
-					</ul>
-					<!-- <p class = "appTitle">
-					</p> -->
+					<div class="login">
+						<% if (username) { %>
+							<span>Hello <%= username %></span>
+							<a id="logoutButton" href="/logout">Logout</a>
+						<% } %>
+						<% if (!username) { %>
+							<a id="loginButton" href="/login">Login</a>
+						<% } %>
+					</div>
 				</div>
 				<div class="col-2 col-sm-10 col-xs-10 col-auto">
 					<a id="hamburger" href="#mainmenu"></a>
