--- a/public/style/style.css
+++ b/public/style/style.css
@@ -12,6 +12,9 @@ body,html {
 }
 
 /* header footer common */
+header {
+	padding-bottom:12px;
+}
 header, footer {
 	width: 100%;
 	text-align: center;
@@ -22,10 +25,11 @@ header, footer {
 	list-style:none;
 	padding:0 10px;
 	margin-top:1rem;
+  margin-bottom: 0;
 }
 #mainmenu ul li {
 	display:inline;
-	margin-left:37px;
+	margin-left:20px;
 }
 #mainmenu ul li a:hover {
 	border-bottom: solid 1px #8d6daa;
@@ -193,8 +197,14 @@ tr:hover .deleteBtn {
 	color: red;
 	font-weight:normal;
 }
+a.logo {
+	display:inline-block;
+	padding;
+}
 .newappIcon {
   display: inline;
+	width:100%;
+	min-width:34px;
   max-width: 100px;
   max-height: 100px;
   margin: 0 auto;
@@ -203,13 +213,17 @@ tr:hover .deleteBtn {
 	border-radius: 5px;
 	background: #8d6daa;
 	opacity: 1;
-  margin-bottom: 12px;
 	vertical-align: middle;
+	/* margin-bottom:12px; */
 }
 .login {
 	display:inline;
 	vertical-align: middle;
 	font-size:12px;
+	color:#fff;
+}
+.login a {
+	color:inherit;
 }
 
 .appTitle {
@@ -300,6 +314,27 @@ header {
 	text-align:left;
 }
 
+dl {
+	border: 3px double #ccc;
+	padding: 0.5em;
+}
+dt {
+	float: left;
+	clear: left;
+	width:30%;
+	text-align: right;
+	font-weight: bold;
+}
+dt::after {
+	content: ":";
+}
+dd {
+	margin: 0 ;
+	margin-left: calc(30% + 20px) ;
+	text-align: left;
+	padding: 0 0 0.5em 0;
+}
+}
 
 /* //// RESPONSIVE STYLE */
 /* // Extra small devices (portrait phones, less than 576px)
@@ -310,7 +345,13 @@ header {
 	.intro {
 		margin-top:-2rem;
 	}
-
+	.newappIcon {
+		margin-bottom:0;
+		min-width:45px;
+	}
+	header .col-3.mr-auto {
+		text-align:center;
+	}
 }
 
 /* // Medium devices (tablets, 768px and up) */
@@ -332,6 +373,7 @@ header {
 	}
 	#mainmenu {display:none;}
 	#hamburger {display:block;}
+	.login {display:block;white-space: nowrap;}
 }
 
 /* // Large devices (desktops, 992px and up) */
