--- a/views/index.html
+++ b/views/index.html
@@ -20,9 +20,11 @@
 	<header class = "fluid-container">
 		<div class="container">
 			<div class="row">
-				<div class="col-2 mr-auto">
+				<div class="col-3 mr-auto">
 					<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
-					<img class="newappIcon" src="images/talkteam_logo.png">
+					<a class="logo" href="/">
+						<img class="newappIcon" src="images/talkteam_logo.png">
+					</a>
 					<div class="login">
 						<% if (username) { %>
 							<span>Hello <%= username %></span>
@@ -33,7 +35,7 @@
 						<% } %>
 					</div>
 				</div>
-				<div class="col-2 col-sm-10 col-xs-10 col-auto">
+				<div class="col-2 col-sm-9 col-xs-9 col-auto">
 					<a id="hamburger" href="#mainmenu"></a>
 					<nav id="mainmenu">
 						<ul>
@@ -54,7 +56,7 @@
 <div class="fluid-container">
 	<div class="row">
 		<div class="col">
-			<img class="bannerimg" src="images/bannerblurred.png">
+			<img class="bannerimg" src="images/silhoutte2.jpg">
 			<!-- <img class="bannerimg" src="images/banner_talkteam1.png"> -->
 		</div>
 	</div>
@@ -63,9 +65,6 @@
 <section class="container main">
 	<div class="row intro">
 		<div class="col-12">
-			<% if (username) { %>
-			  <h2><%= username %></h2>
-			<% } %>
 			<h2>
 				TalkTeam	<br>
 				meeting app for IBM Connections
