--- a/views/login.html
+++ b/views/login.html
@@ -22,11 +22,13 @@
 		<div class="row">
 			<div class="col-1 mr-auto">
 				<!-- <img class="newappIcon" src="images/e-office_logo.svg"> -->
-				<img class="newappIcon" src="images/talkteam_logo.png">
+				<a class="logo" href="/">
+				  <img class="newappIcon" src="images/talkteam_logo.png">
+				</a>
 				<!-- <p class = "appTitle">
 				</p> -->
 			</div>
-			<div class="col-2 col-sm-10 col-xs-10 col-auto">
+			<div class="col-2 col-sm-9 col-xs-9 col-auto">
 				<a id="hamburger" href="#mainmenu"></a>
 				<nav id="mainmenu">
 					<ul>
@@ -51,13 +53,14 @@
 
 <section class="container main">
 	<div class="row intro">
-		<h2>Login</h2>
-		<br><br>
 		<div class="col-12">
+			<h2>Login</h2>
+			<br>
 			<form class="" method="post">
 				<h3>Login here</h3>
-				<input type="text" name="username" value="Pa">
-				<input type="text" name="password" value="Pa">
+				<br>
+				<input type="text" name="username" value="200077317">
+				<input type="text" name="password" value="nonechecked">
 				<button type="submit" name="button"></button>
 			</form>
 		</div>
