Working on admin module admin_cm

--- a/views/content.html
+++ b/views/content.html
@@ -61,7 +61,7 @@
 
 <section class="container main">
 	<div class="row intro">
-		<div class="col-12">
+		<div class="col-12 admin_cm">
 			<h2>
 Welcome <%= username %>, this is a authorized environment !	<br>
 			<span style="font-size: 10px;">u can only see this when you are logged in .</span>
@@ -76,7 +76,7 @@ Welcome <%= username %>, this is a authorized environment !	<br>
 					TalkTeam offers a meeting solution for all kinds of teams. A team can consist of people from the internal organization, but it is also possible to add external participants. By capturing information centrally, it is clear to everyone what they are expected to do.
 			</p>
 		</div>
-		<div class="col-12 purplebox">
+		<div class="col-12 admin_cm purplebox">
 			<h3>
 				paperless and transparent
 			</h3>
@@ -93,7 +93,7 @@ Welcome <%= username %>, this is a authorized environment !	<br>
 				All information is part of the collaboration platform IBM Connections, which makes it easy for those concerned to find the information.
 			</p>
 		</div>
-		<div class="col-12">
+		<div class="col-12 admin_cm">
 			<h3>
 				why do you need TalkTeam?
 			</h3>
