--- a/views/downloads.html
+++ b/views/downloads.html
@@ -63,7 +63,7 @@
 
 <section class="container main">
 	<div class="row intro">
-		<div class="col-12">
+		<div class="col-12 admin_cm">
 			<h2>
 				Downloads
 			</h2>
@@ -80,7 +80,7 @@
 					TalkTeam offers a meeting solution for all kinds of teams. A team can consist of people from the internal organization, but it is also possible to add external participants. By capturing information centrally, it is clear to everyone what they are expected to do.
 			</p>
 		</div>
-		<div class="col-12 purplebox">
+		<div class="col-12 admin_cm purplebox">
 			<h3>
 				paperless and transparent
 			</h3>
