--- a/views/news.html
+++ b/views/news.html
@@ -63,7 +63,7 @@
 
 <section class="container main">
 	<div class="row intro">
-		<div class="col-12">
+		<div class="col-12 admin_cm">
 			<h2>
 				News & Updates
 			</h2>
@@ -71,7 +71,7 @@
 				Meetings are a waste of time? Losing overview of all submitted documents? Not clear which agreements have been made after the meeting? Meetings will be better, smarter and easier using TalkTeam. An app which uses the power of IBM Connections.
 			</p>
 		</div>
-		<div class="col-12 purplebox">
+		<div class="col-12 admin_cm purplebox">
 			<h3>
 				paperless and transparent
 			</h3>
