--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -63,7 +63,7 @@
 
 <section class="container main">
 	<div class="row intro">
-		<div class="col-12">
+		<div class="col-12 admin_cm">
 			<h2>Thank you !</h2>
 		</div>
 		<div>
