--- a/public/style/style.css
+++ b/public/style/style.css
@@ -334,6 +334,31 @@ dd {
 	text-align: left;
 	padding: 0 0 0.5em 0;
 }
+.adminPanel {
+	position:fixed;
+	right:20px;
+	bottom:20px;
+}
+.adminPanel button {
+	-webkit-appearance: button;
+	height: 42px;
+	background-color: #633689;
+	color: #fff;
+	border-radius: 6px;
+	display: inline-block;
+	line-height: 42px;
+	padding: 0 20px;
+	border: 0;
+	cursor: pointer;
+	text-decoration: none;
+	font-size: 14px;
+	font-weight: 600;
+	transition:.3s ease all;
+}
+.adminPanel button:hover {
+	background-color: #3f125e;
+  color: #fff;
+  text-decoration: none;
 }
 
 /* //// RESPONSIVE STYLE */
