Admin panel can Safe content - WIP make DB for content CRUD

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -354,6 +354,7 @@ dd {
 	font-size: 14px;
 	font-weight: 600;
 	transition:.3s ease all;
+	margin-left:20px;
 }
 .adminPanel button:hover {
 	background-color: #3f125e;
