WIP- safe button saving content

--- a/views/index.html
+++ b/views/index.html
@@ -135,10 +135,12 @@
 				<form id="adminPost" method="post">
 					<input id="jsonParser" type="text" name="_jsonParser" hidden="true" value="">
 					<input id="admin_ApplyButton" name="button" value="Apply">
-					<input id="admin_SafeButton" name="button" value="Safe" >
+					<input id="admin_SafeButton" name="button" value="Safe" type="submit">
 				</form>
 			</div>
 		<% } %>
+
+		<input id="jsonConverter" type="text" name="_jsonConverter" hidden="true" value='<%= _jsonConverter %>'
 </section>
 
 	<!-- <section>
