--- a/views/login.html
+++ b/views/login.html
@@ -56,12 +56,12 @@
 		<div class="col-12">
 			<h2>Login</h2>
 			<br>
-			<form class="" method="post">
+			<form class="loginForm" method="post">
 				<h3>Login here</h3>
 				<br>
 				<input type="text" name="username" value="200077317">
 				<input type="text" name="password" value="nonechecked">
-				<button type="submit" name="button"></button>
+				<button type="submit" name="button">Login</button>
 			</form>
 		</div>
 	</div>
