--- a/views/logout.html
+++ b/views/logout.html
@@ -61,7 +61,7 @@
 <section class="container main">
 	<div class="row intro">
 		<div class="col-12">
-			<h2>User 'Pa' logged out succesfully</h2>
+			<h2>Logout succesfull</h2>
 			<br>
 			<p>See you next time !</p>
 		</div>
