--- a/views/index.html
+++ b/views/index.html
@@ -27,8 +27,8 @@
 					</a>
 					<div class="login">
 						<% if (username) { %>
-							<span>Hello <%= username %></span>
-							<a id="logoutButton" href="/logout">Logout</a>
+							<span><%= username %> <a id="logoutButton" href="/logout">Logout</a></span>
+
 						<% } %>
 						<% if (!username) { %>
 							<a id="loginButton" href="/login">Login</a>
@@ -43,7 +43,11 @@
 							<li><a href="/register">Register</a></li>
 							<li><a href="/downloads">Downloads</a></li>
 							<li><a href="/news">News</a></li>
-							<li class="english"><a href="/translate">EN</a></li>
+							<% if (typeof lang == 'undefined' || lang == 'en') { %>
+								<li class="lang"><a href="/?clang=nl"><img src="images/nl.png" alt="Dutch flag" height="34" width="34"></a></li>
+							<% } else if (lang == 'nl') { %>
+								<li class="lang"><a href="/?clang=en"><img src="images/en.png" alt="British flag" height="34" width="34"></a></li>
+							<% } %>
 						</ul>
 					</nav>
 				</div>
@@ -140,11 +144,11 @@
 
 		<% } else if (admin) { %>
 			<div class="adminPanel">
-				<form id="adminPost" method="post">
+				<form id="adminPost" action="/admin_cm/post" method="post">
 					<input id="jsonParser" type="text" name="_jsonParser" hidden="true" value="">
 					<input id="currentPageVar" type="text" name="currentPageVar" hidden="true" value='<%= title %>'>
 					<input id="admin_ApplyButton" name="button" value="Apply">
-					<input id="admin_SafeButton" name="button" value="Safe" type="submit">
+					<input id="admin_SafeButton" name="button" value="Save" type="submit">
 				</form>
 				<div id="setAdmin" hidden="true">toggle setAdmin</div>
 			</div>
@@ -190,7 +194,6 @@
 	<br><br><br>
 	</div> -->
 </div>
-<script type="text/javascript" src="/scripts/loginbutton.js"></script>
 <script src="./lib/domJSON.js"></script>
 <script type="text/javascript" src="/scripts/admin_cm.js"></script>
 
